--- a/assets/header.css
+++ b/assets/header.css
@@ -1,3 +1,10 @@
+#page-content {
+    position: relative;
+    top: 100px;
+    float: left;
+    width: 100%;
+}
+
 .button {
     background-color: white;
     color: black;
