--- a/assets/header.css
+++ b/assets/header.css
@@ -1,8 +1,10 @@
 #page-content {
-    position: relative;
+    #position: relative;
     top: 100px;
     float: left;
     width: 100%;
+    height: 85vh;
+    #margin-bottom: 100px;
 }
 
 #quote-output{
@@ -185,11 +187,13 @@ table tr {
     border: 4px solid #008CBA;
     margin-left: 20%;
     margin-right: 15px;
-    padding: 50px 72px;
+    #padding: 50px 72px;
     border-radius: 8px;
     transition-duration: 0.4s;
     width: 25%;
     float: left;
+    padding: 0px;
+    height: 150px;
 }
 
 .button-main-2{
@@ -199,11 +203,13 @@ table tr {
     border: 4px solid #008CBA;
     margin-left: 15px;
     margin-right: 20%;
-    padding: 50px 72px;
+    #padding: 50px 72px;
     border-radius: 8px;
     transition-duration: 0.4s;
     width: 25%;
-    float: left;
+    float: right;
+    padding: 0px;
+    height: 150px;
 }
 
 .button-main-1:hover {
@@ -265,3 +271,26 @@ table tr {
   0% {opacity:0;}
   100% {opacity:1;}
 }
+
+#scroll-down{
+    display: inline-block;
+    width: 100%;
+    font-size: 50px;
+    font-family: serif;
+    color: #808080;
+    text-align: center;
+    animation: animate 1.5s linear infinite;
+    padding: 30px;
+} 
+  
+ @keyframes animate{
+   0%{
+     opacity: 0;
+   }
+   50%{
+     opacity: 0.7;
+   }
+   100%{
+     opacity: 0;
+   }
+ }
