--- a/assets/header.css
+++ b/assets/header.css
@@ -1,10 +1,15 @@
+#backest {
+    background-color: #008CBA;
+    height: fit-content;
+    overflow: hidden;
+}
+
+
 #page-content {
-    #position: relative;
     top: 100px;
     float: left;
     width: 100%;
-    height: 85vh;
-    #margin-bottom: 100px;
+    height: fit-content;
 }
 
 #quote-output{
@@ -46,16 +51,18 @@
     margin-bottom: 40px;
     width: 96%;
     margin-left: 2%;
-    #background-color: #F4FAFF;
+    background-color: #FFF;
 }
 
 #main-area{
     height: 80vh;
+    height: fit-content;
     padding-top: 15vh;
 }
 
-#main-button-div {
-    height: 30%
+#main-buttons-div {
+    overflow: hidden;
+    padding-bottom: 50px;
 }
 
 #quote-title {
@@ -180,7 +187,7 @@ table tr {
     overflow: visible;
 }
 
-.button-main-1{
+#main-quote-btn{
     font-size: 30px;
     background-color: white;
     color: black;
@@ -196,7 +203,7 @@ table tr {
     height: 150px;
 }
 
-.button-main-2{
+#main-analysis-btn{
     font-size: 30px;
     background-color: white;
     color: black;
@@ -212,12 +219,12 @@ table tr {
     height: 150px;
 }
 
-.button-main-1:hover {
+#main-quote-btn:hover {
     background-color: #008CBA; /* Blue*/
     color: white;
 }
 
-.button-main-2:hover {
+#main-analysis-btn:hover {
     background-color: #008CBA; /* Blue*/
     color: white;
 }
@@ -272,15 +279,19 @@ table tr {
   100% {opacity:1;}
 }
 
+#scroll-container{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    width: 80px;
+    height: 60px;
+    padding: 50px;
+}
+
 #scroll-down{
-    display: inline-block;
     width: 100%;
-    font-size: 50px;
-    font-family: serif;
-    color: #808080;
-    text-align: center;
     animation: animate 1.5s linear infinite;
-    padding: 30px;
 } 
   
  @keyframes animate{
