--- a/assets/header.css
+++ b/assets/header.css
@@ -1,12 +1,61 @@
+.box-shadow
+{
+    background-color: #fff;
+    height: 290px;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+}
+
+.box-shadow::after
+{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    -moz-box-shadow: inset 0 -10px 10px -10px #000000;
+    -webkit-box-shadow: inset 0 -10px 10px -10px #000000;
+    box-shadow: inset 0 -15px 10px -10px rgb(35 44 57);
+    overflow: hidden;
+}
+
+#title {
+    position: relative;
+    vertical-align: middle;
+    display: table-caption;
+    margin-left: 50px;
+    font-size: 40px
+}
+
+.tabs {
+    font-size: 25px;
+}
+
+.instructions {
+    font-size: 35px;
+    padding-top: 50px;
+    padding-left: 10%;
+    padding-right: 10%;
+    text-align: center;
+}
+
+#main-img {
+	/*float: left;*/
+	margin-top: 8vh;
+}
+
 #malta-graph {
-    padding: 100px;
+    width: 100%;
     height: 800px
 }
 
 #backest {
-    background-color: #ADD8E6;
-    height: fit-content;
-    overflow: hidden;
+    background-color: #ADD8E6; /*#052a33*/
+    height: 100vh;
+    overflow: auto;
 }
 
 #bar-graph {
@@ -25,9 +74,8 @@
 }
 
 #quote-filter-area{
-    width: 40%;
+    width: 56%;
     float: left;
-    padding: 2%;
 }
 
 #page-content {
@@ -77,7 +125,7 @@
 
 #scatter-area ,#bar-area, #main-area, #quote-area{
     border-radius: 10px;
-    box-shadow: 0 5px 12px 2px rgba(0,48,130,.08)!important;
+    box-shadow: 0 5px 12px 2px rgba(0,48,130,.3)!important;
     margin-bottom: 40px;
     width: 96%;
     margin-left: 2%;
@@ -85,14 +133,16 @@
 }
 
 #main-area{
-    height: 80vh;
     height: fit-content;
-    padding-top: 15vh;
+    /*padding-top: 15vh;*/
+    /*margin-top: 45vh*/
+    margin-top: 50px;
 }
 
 #main-buttons-div {
     overflow: hidden;
-    padding-bottom: 50px;
+    /*padding-bottom: 50px;*/
+    /*padding-top: 40px;*/
 }
 
 #quote-title {
@@ -110,12 +160,15 @@
     width: 100%;
     background-color: #FFFFFF;
     margin: 0px;
-    box-shadow: 0 0 2rem rgb(35 44 57 / 20%);
+    box-shadow: 0 0 2rem rgb(35 44 57 / 80%);
 }
 
 
 body {
     margin: 0px;
+}
+
+.dark-mode {
 }
 
 thead {
@@ -159,17 +212,15 @@ table tr {
 .slider {
     color: #008CBA;
     overflow: visible;
-    #padding: 25px;
     clear: both;
-
-    width: 100%;
-    margin-left: 10%;
-    margin-right: 10%;
-    #margin-top: 5%;
-    padding-top: 25px;
+    width: 80%;
+	padding: 0px;
+	padding-left: 10%;
+	padding-top: 40px;
 }
 
 .slider-displayer {
+	text-align: center;
     padding-top: 15px;
     padding-left: 10px;
     font-size: 20px;
@@ -179,20 +230,13 @@ table tr {
 
 .filter-quote-dd {
     overflow: visible;
-    padding: 25px;
+	padding-top: 25px;
+	padding-bottom: 25px;
+	padding-left: 10%;
     clear: both;
     float: left;
     margin: auto;
     width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
-    #margin-top: 5%;
-    #font-size: 15px;
-    #padding-top: 5px;
-    #padding-left: 10px;
-    #font-size: 20px;
-    #font-family: Arial, Helvetica, sans-serif;
-    #color: #808080;
 }
 
 .filter-dd {
@@ -270,18 +314,21 @@ table tr {
 }
 
 .fade-in-text {
-  display: inline-block;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 40px;
-  color: #808080;
-  animation: fadeIn linear 4s;
-  -webkit-animation: fadeIn linear 4s;
-  -moz-animation: fadeIn linear 4s;
-  -o-animation: fadeIn linear 4s;
-  -ms-animation: fadeIn linear 4s;
-  padding: 150px;
-  padding-top: 100px;
-  padding-bottom: 130px;
+	width: 100%;
+	text-align: center;
+	display: inline-block;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 35px;
+	color: #808080;
+	animation: fadeIn linear 4s;
+	-webkit-animation: fadeIn linear 4s;
+	-moz-animation: fadeIn linear 4s;
+	-o-animation: fadeIn linear 4s;
+	-ms-animation: fadeIn linear 4s;
+	/*padding-top: 100px;
+	padding-bottom: 130px;*/
+	padding-top: 5%;
+	padding-bottom: 5%;
 }
 
 @keyframes fadeIn {
@@ -316,7 +363,9 @@ table tr {
     width: 50%;
     width: 80px;
     height: 60px;
-    padding: 50px;
+    /*padding: 50px;*/
+	padding-bottom: 20px;
+	padding-top: 20px;
 }
 
 #scroll-down{
