--- a/assets/header.css
+++ b/assets/header.css
@@ -62,10 +62,16 @@
     padding: 10px;
 }
 
-#quote-image {
+#quote-image-container {
     width: 40%;
     float: left;
     margin-left: 4%;
+    transition-duration: 1s;
+}
+
+#quote-image {
+    width: 100%;
+    height: 100%;
     border-radius: 10%;
 }
 
